<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultActivity"
    android:background="@drawable/result"
    android:padding="20dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@color/Mate"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        tools:ignore="TextContrastCheck"
        android:layout_gravity="center_horizontal"
        android:gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:contentDescription="@string/image"
        android:layout_marginTop="30dp"
        android:src="@drawable/trophy3" />

    <TextView
        android:id="@+id/tv_congratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/hey_congratulations"
        android:textColor="#65246A"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#65246A"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="Username" />


    <TextView
        android:id="@+id/tv_score"
        android:layout_width="327dp"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:textColor="#65246A"
        android:textSize="20sp"
        tools:ignore="TextSizeCheck"
        tools:text="Your score is 9/10"
        android:textAlignment="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/creamy"
        android:text="@string/finish"
        android:textColor="@color/Lavente"
        android:textSize="30sp"
        android:textStyle="bold" />

</LinearLayout>